fix misaligned buttons in conflict marker

--- a/diff/conflictmarker.css
+++ b/diff/conflictmarker.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     border-radius: 4px 4px 0 0;
     padding: 0px 1.2em;
+    cursor: default;
 }
 .ace_dark .conflict-widget-1 {
     background: #3A6120;
@@ -13,6 +14,7 @@
     box-sizing: border-box;      
     border-radius: 0 0 4px 4px;
     padding: 0px 1.2em;
+    cursor: default;
 }
 .ace_dark .conflict-widget-2 {
     background: #124775;
@@ -22,6 +24,7 @@
     background: inherit;
     box-sizing: border-box;
     padding: 0px 1.2em;
+    cursor: default;
 }
 
 .conflict-marker-1 {
@@ -60,7 +63,6 @@
     -ms-user-select: none;
     user-select: none;
     overflow: hidden;
-    /*opacity: 0.7;*/
     border: 1px solid rgba(100,100,100,0.23);
     padding: 2px 4px;
     box-sizing: border-box;
@@ -74,7 +76,6 @@
     color: #333;
     background: #B1B1B1;
 }
-
 .ace_button:hover {
     background-color: #eee;
     opacity:1;
@@ -89,6 +90,10 @@
 .ace_dark .ace_button:active {
     background-color: #B1B1B1;
 }
+.ace_button.disabled {
+    color: transparent;
+    pointer-events: none;
+}
 
 .ace_button.checked {
     border-color: #3399ff;
@@ -96,24 +101,22 @@
 }
 .conflict-button-top {
     position: absolute;
-    top: 16px;
     right: 1.4em;
     transform: translateY(-50%);
 }
 .conflict-button-bottom {
     position: absolute;
-    bottom: 16px;
     right: 1.4em;
     transform: translateY(50%);
 }
 
 .conflict-widget-split .conflict-button-top {
-    top: 0.7em;
+    transform: none;
 }
 
 .conflict-widget-split .ace_button{
-    display: block;
+    display: inline-block;
     width: 1.5em;
-    margin-top: -0.1em;
+    margin-top: -3px;
     transform: rotate(90deg);
 }
